welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: ';' expected but 'else' found.
    else { return true}
    ^